@startuml

' ───────────────────────── Colectivo y Ubicación ─────────────────────────

class Colectivo {
  -nombre: String
  -descripcion: String
  -tipoColectivo: TIPO_COLECTIVO
  -ubicacion: Ubicacion
  -proyectos: Proyecto[]
}

enum TIPO_COLECTIVO {
  FUNDACION
  ASOCIACION_BARRIAL
  ONG
  ASAMBLEA
}

class Ubicacion {
  -tipoUbicacion: TIPO_UBICACION
  -nombre: String

  +esDeAlcanceNacional(): boolean
}

enum TIPO_UBICACION {
  ARGENTINA
  PROVINCIA
  CABA
  LOCALIDAD
}

Colectivo --> TIPO_COLECTIVO
Colectivo --> "*" Proyecto
Colectivo --> "0..1" Ubicacion
Ubicacion --> TIPO_UBICACION

' ───────────────────────── Proyecto y Compromiso ─────────────────────────

class Proyecto {
  -titulo: String
  -descripcion: String
  -colaboraciones: Colaboracion[]
  -habilidadesNecesarias: Habilidad[]
  -modalidadColaboracion: ModalidadColaboracion
  -estado: PROYECTO_ESTADO
  -compromisoEsperado: Compromiso

  +finalizarProyecto(): void
  +estaAbierto(): Boolean
  +cumpleHabilidadesRequeridas(persona: Colaborador): Boolean
  +agregarHabilidadRequerida(habilidad: Habilidad): void
  +quitarHabilidadRequeridad(habilidad: Habilidad): void
}

enum PROYECTO_ESTADO {
  ABIERTO
  FINALIZADO
}

class ModalidadColaboracion {
  -ofreceIncentivoEconomico: Boolean
  -posibilidadDeContratacion: Boolean

  +esGratuito(): Boolean
}

class Compromiso {
  -cantidadHoras: Int
  -periodo: PERIODO_COMPROMISO
}

enum PERIODO_COMPROMISO {
  HS_TOTALES
  HS_SEMANALES
  HS_MENSUALES
}

Proyecto --> PROYECTO_ESTADO
Proyecto --> Compromiso
Proyecto --> ModalidadColaboracion
Compromiso --> PERIODO_COMPROMISO

' ───────────────────────── Habilidad y Colaboración ─────────────────────────

class Habilidad {
  -titulo: String
  -codigo: String
  -descripcion: String
  -fechaCreacion: LocalDateTime
  -usuario: String
  -activo: Boolean
}

class Colaboracion {
  -fecha: Date
  -colaborador: Colaborador
}

class Colaborador {
  -nombreFantasia: String
  -nombre: String
  -apellido: String
  -cuentaGit: String
  -habilidades: Habilidad[]
  -pronombres: String[]
  -presentacion: String

  +tieneHabilidad(habilidad: Habilidad): boolean
  +agregarHabilidad(habilidad: Habilidad): void
  +quitarHabilidad(habilidad: Habilidad): void
}

Proyecto --> "*" Habilidad
Proyecto --> "*" Colaboracion
Colaboracion --> Colaborador
Colaborador --> "*" Habilidad

@enduml
